token attribute added on Wishlist, createWishlist updated with token, getWishlistByToken method added in repository, WishlistRowmapper updated with token, setup-database updated wit token collumn, share buttom added in profile.html, sharedWishlist.html added, getMapping added with /share/{token} endpoint